/**
 * InterfaceState
 */
public interface InterfaceState {

    public void handleA(StateContext c);

    public void handleB(StateContext c);
}